feat(components/molecule/stepper): add label to each step a11y

--- a/components/molecule/stepper/src/Step/index.scss
+++ b/components/molecule/stepper/src/Step/index.scss
@@ -1,6 +1,7 @@
 @use 'sass:math';
 
 $base-class-step: #{$base-class}Step;
+$base-class-step-label: #{$base-class-step}Label;
 
 #{$base-class-step} {
   box-sizing: content-box;
@@ -16,13 +17,13 @@ $base-class-step: #{$base-class}Step;
       color: $c-gray-light;
     }
   }
-  #{$base-class-step}Label {
+  #{$base-class-step-label} {
     color: $c-gray-dark-2;
   }
 
   &--design {
     &-default {
-      #{$base-class-step}Label {
+      #{$base-class-step-label} {
         width: 100px;
         display: flex;
         align-items: center;
@@ -67,16 +68,22 @@ $base-class-step: #{$base-class}Step;
       &#{$base-class-step}--alignment {
         &-vertical {
           max-height: 6 * $sz-base;
-          #{$base-class-step}Label {
+          #{$base-class-step-label} {
             text-align: start;
             justify-content: flex-start;
+            &:not(#{$base-class-step-label}--visible) {
+              display: none;
+            }
           }
         }
         &-horizontal {
           max-width: 6 * $sz-base;
-          #{$base-class-step}Label {
+          #{$base-class-step-label} {
             text-align: center;
             justify-content: center;
+            &:not(#{$base-class-step-label}--visible) {
+              display: none;
+            }
           }
         }
       }
@@ -112,14 +119,19 @@ $base-class-step: #{$base-class}Step;
             width: $sz-base;
             height: 100%;
           }
-          #{$base-class-step}Label {
+          #{$base-class-step-label} {
             transform: rotate(180deg);
             writing-mode: vertical-rl;
             text-orientation: mixed;
             height: max-content;
             width: calc(math.div($w-stepper-label, 2) - $sz-base * 2);
-            display: flex;
+            display: none;
             align-items: flex-end;
+            &#{$base-class-step-label}--step-current-true {
+              &#{$base-class-step-label}--visible {
+                display: flex;
+              }
+            }
           }
         }
         &-horizontal {
@@ -127,11 +139,16 @@ $base-class-step: #{$base-class}Step;
           flex-direction: column-reverse;
           align-items: flex-start;
           gap: $sz-base;
-          #{$base-class-step}Label {
+          #{$base-class-step-label} {
             align-items: flex-end;
-            display: flex;
+            display: none;
             height: calc(math.div($w-stepper-label, 2) - $sz-base * 2);
             width: max-content;
+            &#{$base-class-step-label}--step-current-true {
+              &#{$base-class-step-label}--visible {
+                display: flex;
+              }
+            }
           }
           #{$base-class-step}Icon {
             width: 100%;
@@ -172,7 +189,7 @@ $base-class-step: #{$base-class}Step;
         #{$base-class-step}Icon {
           background-color: $c-stepper-visited;
         }
-        #{$base-class-step}Label {
+        #{$base-class-step-label} {
           color: $c-stepper-visited;
         }
       }
@@ -185,23 +202,29 @@ $base-class-step: #{$base-class}Step;
             width: $sz-base;
             height: 100%;
           }
-          #{$base-class-step}Label {
+          #{$base-class-step-label} {
             transform: rotate(180deg);
             writing-mode: vertical-rl;
             text-orientation: mixed;
             width: calc(math.div($w-stepper-label, 2) - $sz-base * 2);
             display: flex;
             align-items: flex-end;
+            &:not(#{$base-class-step-label}--visible) {
+              display: none;
+            }
           }
         }
         &-horizontal {
           width: math.div($w-stepper-label, 2);
           flex-direction: column-reverse;
           gap: $sz-base;
-          #{$base-class-step}Label {
+          #{$base-class-step-label} {
             height: calc(math.div($w-stepper-label, 2) - $sz-base * 2);
             display: flex;
             align-items: flex-end;
+            &:not(#{$base-class-step-label}--visible) {
+              display: none;
+            }
           }
           #{$base-class-step}Icon {
             width: 100%;
