feat(components/molecule/selectPopover): add remove button feature

--- a/components/molecule/selectPopover/src/_settings.scss
+++ b/components/molecule/selectPopover/src/_settings.scss
@@ -6,4 +6,5 @@ $bdrs-select-popover-content: 0px !default;
 $bxsh-select-popover: 0 1px 4px 0 rgba(0, 0, 0, 0.24) !default;
 $mw-select-popover: 250px !default;
 $w-select-popover: 344px !default;
+$p-select-popover-select-with-remove: $p-m 0 $p-m $p-l !default;
 $sizes-molecule-select-popover-heights: (m $h-atom-input--m, s $h-atom-input--s, xs $h-atom-input--xs) !default;
