feat(components/molecule/autosuggest): styles

--- a/components/molecule/autosuggest/src/index.scss
+++ b/components/molecule/autosuggest/src/index.scss
@@ -4,4 +4,5 @@
 @import '~@s-ui/react-molecule-dropdown-list/lib/index';
 
 @import './styles/settings.scss';
+@import './styles/mixins.scss';
 @import './styles/index.scss';
