--- a/components/molecule/autosuggest/src/styles/settings.scss
+++ b/components/molecule/autosuggest/src/styles/settings.scss
@@ -1,3 +1,8 @@
 $z-autosuggest-list: $z-navigation !default;
 
 $bdw-autosuggest-container: $bdw-s !default;
+
+$bd-molecule-autosuggest-focus: $bd-atom-input !default;
+$bxsh-molecule-autosuggest-focus: $bxsh-atom-input !default;
+$ol-molecule-autosuggest-focus: 0 none !default;
+$olo-molecule-autosuggest-focus: 0 !default;
