feat(components/molecule/dropdownOption): improve design when description and left addon exists

--- a/components/molecule/dropdownOption/src/styles/index.scss
+++ b/components/molecule/dropdownOption/src/styles/index.scss
@@ -102,4 +102,22 @@ $base-class: '.sui-MoleculeDropdownOption';
     justify-content: center;
     padding: $pt-molecule-dropdown-option-with-description $pl-molecule-dropdown-option;
   }
+
+  &--withDescriptionAndAddon {
+    flex-direction: row;
+
+    & #{$base-class} {
+      &-leftAddon {
+        height: fit-content;
+      }
+      &-text {
+        display: flex;
+        gap: 4px;
+        flex-direction: column;
+      }
+      &-description {
+        margin: 0;
+      }
+    }
+  }
 }
