--- a/themes/epreselec.scss
+++ b/themes/epreselec.scss
@@ -2,6 +2,7 @@
 //
 
 // Inherit from original theme
+@import '~@s-ui/theme/lib/.tokens/.tokens';
 @import '~@s-ui/theme/lib/settings';
 @import '~@adv-ui/ep-theme/lib/index';
 
