--- a/themes/kleinanzeigen.scss
+++ b/themes/kleinanzeigen.scss
@@ -4,6 +4,7 @@ $ff-sans-serif: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, s
 $fz-base: 16px;
 
 // Inherit from original theme
+@import '~@s-ui/theme/lib/.tokens/.tokens';
 @import '~@s-ui/theme/lib/settings';
 @import '~@adv-ui/ka-theme/lib/index';
 @import '~@adv-ui/ka-theme/lib/normalize';
