--- a/themes/carfactory.scss
+++ b/themes/carfactory.scss
@@ -1,5 +1,6 @@
 // Settings
-@import '~@s-ui/theme/lib/.tokens/.tokens';
+@import '~@s-ui/theme/lib/.tokens/.tokens.light';
+@import '~@s-ui/theme/lib/.tokens/.tokens.dark';
 @import '~@s-ui/theme/lib/settings';
 
 // Inherit from original theme
