--- a/themes/kleinanzeigen.scss
+++ b/themes/kleinanzeigen.scss
@@ -4,7 +4,8 @@ $ff-sans-serif: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, s
 $fz-base: 16px;
 
 // Inherit from original theme
-@import '~@s-ui/theme/lib/.tokens/.tokens';
+@import '~@s-ui/theme/lib/.tokens/.tokens.light';
+@import '~@s-ui/theme/lib/.tokens/.tokens.dark';
 @import '~@s-ui/theme/lib/settings';
 @import '~@adv-ui/ka-theme/lib/index';
 @import '~@adv-ui/ka-theme/lib/normalize';
