--- a/utils/sui-theme/src/_default.scss
+++ b/utils/sui-theme/src/_default.scss
@@ -1,3 +1,15 @@
 @mixin p {
   margin: 0 0 $m-v;
 }
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color-scheme: light;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    color-scheme: dark;
+  }
+}
