--- a/components/atom/button/src/styles/index.scss
+++ b/components/atom/button/src/styles/index.scss
@@ -150,7 +150,7 @@ $base-class: '.sui-AtomButton';
         }
 
         &#{$base-class}--negative {
-          background: $color-invert;
+          background: var(--c-base, $color-invert);
           border-color: $color-invert;
           color: $color;
 
@@ -248,6 +248,8 @@ $base-class: '.sui-AtomButton';
 
   &:focus {
     box-shadow: $bxsh-atom-button-focus;
+    outline: 2px solid transparentize($c-primary, 0.2);
+    outline-offset: 2px;
   }
 
   &--squared {
