fix(utils/sui-theme): fix color input schema

--- a/utils/sui-theme/src/components/atom/input/_settings.scss
+++ b/utils/sui-theme/src/components/atom/input/_settings.scss
@@ -7,7 +7,7 @@ $bd-atom-input: $bdw-s solid $c-primary !default;
 $bd-atom-input-focus: $bd-atom-input !default;
 $fz-atom-input: $fz-base !default;
 $bgc-atom-input: $c-white !default;
-$c-atom-input: initial !default;
+$c-atom-input: var(--c-base-inverse, initial) !default;
 $bd-atom-input-base: $bdw-s solid $c-gray-light !default;
 
 $bd-molecule-autosuggest-focus: $bd-atom-input !default;
