--- a/components/atom/textarea/src/styles/settings.scss
+++ b/components/atom/textarea/src/styles/settings.scss
@@ -13,9 +13,9 @@ $bgc-atom-textarea--disabled: $c-gray-lightest !default;
 $bd-atom-textarea: $bdw-s solid $c-gray-light !default;
 $bdrs-atom-textarea: 0 !default;
 $bd-atom-textarea--disabled: $bdw-s solid initial !default;
-$c-atom-textarea: initial !default;
+$c-atom-textarea: var(--c-base-inverse, initial) !default;
 $c-atom-textarea--disabled: $c-gray-light !default;
-$c-atom-textarea-placeholder: initial !default;
+$c-atom-textarea-placeholder: color-mix(in srgb, var(--c-base-inverse, initial) 80%, transparent) !default;
 $w-atom-textarea: 100% !default;
 $rsz-atom-textarea: auto !default;
 
