--- a/components/atom/input/src/styles/index.scss
+++ b/components/atom/input/src/styles/index.scss
@@ -1,5 +1,6 @@
 $base-class: '.sui-AtomInput';
 
 @import '../Input/Component/index';
+@import '../Container/index';
 @import '../Input/Wrappers/index';
 @import '../Password/index';
