--- a/utils/sui-theme/src/utils/_colors.scss
+++ b/utils/sui-theme/src/utils/_colors.scss
@@ -15,8 +15,8 @@
 $color-variation-light: var(--c-base, white) !default;
 $color-variation-dark: var(--c-base-inverse, black) !default;
 
-$color-lighten-steps: 25, 50, 75, 90, 95 !default;
-$color-darken-steps: 20, 35, 55, 75 !default;
+$color-lighten-steps: 20, 40, 60, 80, 90 !default;
+$color-darken-steps: 20, 40, 60, 80, 90 !default;
 
 @function color-variation($color, $step: 0, $dark: $color-variation-dark, $light: $color-variation-light) {
   $positive-steps: length($color-lighten-steps);
