fix(components/atom/input): input with retrocompatibility

--- a/components/atom/input/src/Container/index.scss
+++ b/components/atom/input/src/Container/index.scss
@@ -1,7 +1,7 @@
 $base-class-container: '#{$base-class}_Container';
 
 #{$base-class-container} {
-  display: inline-flex;
+  display: flex;
   border-radius: $bdrs-atom-input;
   $this: &;
   &:not(#{$base-class-container}-noBorder) {
