--- a/components/atom/input/src/Input/Component/index.scss
+++ b/components/atom/input/src/Input/Component/index.scss
@@ -10,6 +10,7 @@ $class-read-only: '#{$base-class-input}--readOnly';
   border-radius: $bdrs-atom-input;
   min-height: auto;
   text-overflow: $tov-atom-input-placeholder;
+  flex-grow: 1;
   &--charsSize {
     width: inherit;
   }
