--- a/components/atom/input/src/Password/styles/index.scss
+++ b/components/atom/input/src/Password/styles/index.scss
@@ -6,6 +6,7 @@ $base-class-password: '#{$base-class-input}-password';
   display: flex;
   @include sui-atom-input-input;
   padding-left: 0;
+  border-radius: $bdrs-atom-input;
 
   & > input {
     padding-right: $pr-atom-input-password;
@@ -34,6 +35,7 @@ $base-class-password: '#{$base-class-input}-password';
     color: $c-atom-input-password-toggle-button;
     display: inline-block;
     user-select: none;
+    border-radius: $bdrs-atom-input;
     &:focus-visible {
       outline-style: solid;
       outline-color: transparentize($c-primary, 0.2);
