--- a/components/atom/input/src/Container/index.scss
+++ b/components/atom/input/src/Container/index.scss
@@ -2,6 +2,7 @@ $base-class-container: '#{$base-class}_Container';
 
 #{$base-class-container} {
   display: flex;
+  width: 100%;
   border-radius: $bdrs-atom-input;
   $this: &;
   &:not(#{$base-class-container}-noBorder) {
