--- a/components/atom/input/src/Input/Wrappers/Addons/index.scss
+++ b/components/atom/input/src/Input/Wrappers/Addons/index.scss
@@ -22,6 +22,7 @@
 
   &Wrapper {
     display: flex;
+    flex-grow: 1;
     @include atom-input-shape-wrapper(
       $base-class,
       #{'.sui-AtomInput--withAddonWrapper'},
