--- a/components/atom/tag/src/styles/index.scss
+++ b/components/atom/tag/src/styles/index.scss
@@ -136,54 +136,22 @@ $base-class: '.sui-AtomTag';
   }
 
   &--size {
-    &-small {
-      border-radius: ceil($h-atom-tag-s * 0.5);
-      height: $h-atom-tag-s;
-      padding: $p-atom-tag-s;
-      &.sui-AtomTag-hasIcon.sui-AtomTag-hasClose {
-        padding: map-get($p-atom-tag-hasIcon-hasClose, 'small');
-      }
+    @each $tag_name, $tag_h, $tag_p in $sz-atom-tag {
+      &-#{$tag_name} {
+        border-radius: ceil($tag_h * 0.5);
+        height: $tag_h;
+        padding: $tag_p;
+        &.sui-AtomTag-hasIcon.sui-AtomTag-hasClose {
+          padding: map-get($p-atom-tag-hasIcon-hasClose, $tag_name);
+        }
 
-      & .sui-AtomTag-label {
-        line-height: $h-atom-tag-s;
-      }
+        & .sui-AtomTag-label {
+          line-height: $tag_h;
+        }
 
-      .sui-AtomTag-closeable {
-        @include icon-secondary-clickable-area($h-atom-tag-s);
-      }
-    }
-
-    &-medium {
-      height: $h-atom-tag-m;
-      padding: $p-atom-tag-m;
-      border-radius: ceil($h-atom-tag-m * 0.5);
-      &.sui-AtomTag-hasIcon.sui-AtomTag-hasClose {
-        padding: map-get($p-atom-tag-hasIcon-hasClose, 'medium');
-      }
-
-      & .sui-AtomTag-label {
-        line-height: $h-atom-tag-m;
-      }
-
-      .sui-AtomTag-closeable {
-        @include icon-secondary-clickable-area($h-atom-tag-m);
-      }
-    }
-
-    &-large {
-      border-radius: ceil($h-atom-tag-l * 0.5);
-      height: $h-atom-tag-l;
-      padding: $p-atom-tag-l;
-      &.sui-AtomTag-hasIcon.sui-AtomTag-hasClose {
-        padding: map-get($p-atom-tag-hasIcon-hasClose, 'large');
-      }
-
-      & .sui-AtomTag-label {
-        line-height: $h-atom-tag-l;
-      }
-
-      .sui-AtomTag-closeable {
-        @include icon-secondary-clickable-area($h-atom-tag-l);
+        .sui-AtomTag-closeable {
+          @include icon-secondary-clickable-area($tag_h);
+        }
       }
     }
   }
@@ -201,35 +169,22 @@ $base-class: '.sui-AtomTag';
 
     @include media-breakpoint-up(s) {
       &#{$self}--size {
-        &-small {
-          border-radius: ceil($h-atom-tag-s * 0.5);
-          height: $h-atom-tag-s;
-          padding: $p-atom-tag-s;
-          &.sui-AtomTag-hasIcon.sui-AtomTag-hasClose {
-            padding: map-get($p-atom-tag-hasIcon-hasClose, 'small');
-          }
+        @each $tag_name, $tag_h, $tag_p in $sz-atom-tag {
+          &-#{$tag_name} {
+            border-radius: ceil($tag_h * 0.5);
+            height: $tag_h;
+            padding: $tag_p;
+            &.sui-AtomTag-hasIcon.sui-AtomTag-hasClose {
+              padding: map-get($p-atom-tag-hasIcon-hasClose, 'small');
+            }
 
-          & .sui-AtomTag-label {
-            line-height: $h-atom-tag-s;
-          }
+            & .sui-AtomTag-label {
+              line-height: $tag_h;
+            }
 
-          .sui-AtomTag-closeable {
-            @include icon-secondary-clickable-area($h-atom-tag-s);
-          }
-        }
-        &-medium {
-          height: $h-atom-tag-m;
-          padding: $p-atom-tag-m;
-          &.sui-AtomTag-hasIcon.sui-AtomTag-hasClose {
-            padding: map-get($p-atom-tag-hasIcon-hasClose, 'medium');
-          }
-
-          & .sui-AtomTag-label {
-            line-height: $h-atom-tag-m;
-          }
-
-          .sui-AtomTag-closeable {
-            @include icon-secondary-clickable-area($h-atom-tag-m);
+            .sui-AtomTag-closeable {
+              @include icon-secondary-clickable-area($tag_h);
+            }
           }
         }
       }
