--- a/components/molecule/dropdownOption/src/_settings.scss
+++ b/components/molecule/dropdownOption/src/_settings.scss
@@ -9,7 +9,7 @@ $c-molecule-dropdown-option--highlight-mark: initial !default;
 $bdr-molecule-dropdown-option: 0 !default;
 $bdrs-molecule-dropdown-option: $bdr-molecule-dropdown-option !default;
 $bg-molecule-dropdown-option--highlight-mark: $c-highlight !default;
-$bg-molecule-dropdown-option-selected: none !default;
+$bg-molecule-dropdown-option-selected: $c-gray-light-3 !default;
 $fw-molecule-dropdown-option-selected-text: $fw-bold !default;
 $c-molecule-dropdown-option-selected-text: inherit !default;
 $fz-molecule-dropdown-option-text: inherit !default;
